--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "expo": "~54.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-icons": "^5.5.0",
+    "react-native": "0.81.4",
+    "expo-font": "~14.0.8",
+    "expo-splash-screen": "~31.0.10"
   },
   "private": true
 }
