--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
+    "@reduxjs/toolkit": "^2.9.0",
     "expo": "~54.0.7",
     "expo-font": "~14.0.8",
     "expo-splash-screen": "~31.0.10",
@@ -20,7 +21,8 @@
     "react-icons": "^5.5.0",
     "react-native": "0.81.4",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-redux": "^9.2.0"
   },
   "private": true
 }
