--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.81.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "yup": "^1.7.1"
   },
   "private": true
 }
