--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-redux": "^9.2.0",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "expo-image-picker": "~17.0.8",
+    "expo-sqlite": "~16.0.8"
   },
   "private": true
 }
