--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
     "@reduxjs/toolkit": "^2.9.0",
+    "@sekizlipenguen/react-native-popup-confirm-toast": "^1.0.7",
     "expo": "~54.0.7",
     "expo-font": "~14.0.8",
+    "expo-image-picker": "~17.0.8",
     "expo-splash-screen": "~31.0.10",
+    "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
+    "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-icons": "^5.5.0",
     "react-native": "0.81.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-redux": "^9.2.0",
-    "yup": "^1.7.1",
-    "expo-image-picker": "~17.0.8",
-    "expo-sqlite": "~16.0.8"
+    "sweetalert2": "^11.26.2",
+    "yup": "^1.7.1"
   },
   "private": true
 }
